The tooltip alignment has been fixed. The hover color has been changed to black. This will probably need to be changed based on TA input but it should now be easy to change on the fly

--- a/css/styles.css
+++ b/css/styles.css
@@ -90,20 +90,22 @@ div.tooltip {
     height: 300px;
     padding: 2px;
     font: 25px sans-serif;
-    background: grey;
+    background: #cccccc;
     border: 0px;
     border-radius: 8px;
     pointer-events: none;
+    color: black;
 }
 
 div.tooltip_info_box {
     width: 100%;
-    height: 100%
+    height: 100%;
+    padding-top: 10px;
 }
 
 div.tooltip_titles {
     text-align: left;
-    width: 80%;
+    width: 60%;
     color: black;
     display: inline-block;
     padding-left: 5px;
@@ -112,8 +114,8 @@ div.tooltip_titles {
 
 div.tooltip_info {
     text-align: right;
-    width: 19%;
-    color: darkblue;
+    width: 39%;
+    color: #08519c;
     display: inline-block;
     padding-right: 5px;
     font: 18px sans-serif;
